--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,9 @@
           <a class="nav-link" href="#">Home</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="all-users" routerLinkActive="active">All Users</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#">Reservas</a>
         </li>
         <li class="nav-item">
@@ -22,33 +25,5 @@
   </div>
 </nav>
 <section class="container" id="contenedor">
-  <div class="container">
-    <form>
-      <label for="dni">Insertar DNI:</label><br>
-      <input type="text" id="dni" name="dni"><br>
-      <label for="nombre">Insertar nombre:</label><br>
-      <input type="text" id="nombre" name="nombre"><br>
-    </form>
-  </div>
-  <div class="form-group row">
-    <table class="table table-hover">
-      <thead>
-      <tr >
-        <th>Nombre</th>
-        <th>Apellido</th>
-        <th>Edad</th>
-        <th>DNI</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let user of allUsers">
-        <th>{{user.nombre}}</th>
-        <th>{{user.apellidos}}</th>
-        <th>{{user.edad}}</th>
-        <th>{{user.dni}}</th>
-      </tr>
-      </tbody>
-    </table>
-
-    </div>
+  <router-outlet></router-outlet>
 </section>
